--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,10 +1,11 @@
 .card {
-    /* Add shadows to create the "card" effect */
+    /* Add shadows to create the "card" effect 
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 30%;
-    height: 40%;
+    transition: 0.3s;*/
+    width: 40%;
+    height: 30%;
     margin: 4rem;
+    display: inline-block;
   }
   
   /* On mouse-over, add a deeper shadow */
@@ -17,12 +18,12 @@
     padding: 2px 16px;
   }
 
-  img{
-    width: 50%;
-    height: 70%;
+  .card-img{
+    width: 100%;
+    height: 100%;
     padding-top: 30px;
   }
 
-  p {
+  .card-text {
     text-align: justify;
   }
