--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,8 @@
     padding: 60px;
     text-align: center;
     background: #1abc9c;
+    background-image: url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80");
     color: white;
     font-size: 30px;
+    opacity: 0.8;
   }
