--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -26,3 +26,38 @@
   .card-text {
     text-align: justify;
   }
+
+  .card-title{
+    font-size: 1em;
+  }
+
+  @media (max-width: 1200px) {
+    .card{
+      width: 40%;
+      height: 40%;
+      margin: .5rem;
+    }
+    .card-text {
+      display:none;
+    }
+    .card-title{
+      font-size: 1em;
+    }
+  }
+
+  @media (max-width: 600px) {
+    .card{
+      width: 100%;
+      height: 100%;
+    }
+    .card-text {
+      display:none;
+    }
+    .card-title{
+      display:none;
+    }
+  }
+
+  
+
+  
