--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+.navbar{
+  font-size: 1.3em;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -22,4 +26,16 @@ ul {
   /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: #111;
+  }
+
+  @media (max-width:1200px){
+    .navbar{
+      font-size: 1em;
+    }
+  }
+
+  @media (max-width: 600px){
+    .navbar{
+      font-size: .5em;
+    }
   }
