--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -13,9 +13,10 @@
   }
 
   .form {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 70%;
     margin: auto;
+    padding-top: 30px;
   }
 
   img.form-img{
@@ -25,4 +26,5 @@
 
   p.form-text{
     text-align: justify;
+    padding-bottom: 30px;
   }
