--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -24,6 +24,14 @@ ul {
     text-decoration: none;
   }
   
+  .button{
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
   /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: #111;
