changes added to API connection

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -14,7 +14,7 @@
   }
   
   /* Add some padding inside the card container */
-  .container {
+  .card-container {
     margin: 0rem 2rem 2rem;
     width: 80%;
     height: 100%;
