--- a/src/components/Color Pallet/Colorpallet.css
+++ b/src/components/Color Pallet/Colorpallet.css
@@ -5,7 +5,7 @@
     align-content: space-between;
   }
   
-  .container{
+  .color-pallet-container{
     width: 25%;
     display: flex;
     flex-wrap: wrap;
